src/test/ui/unreachable/unreachable-loop-patterns.stderr
error: unreachable pattern
  --> $DIR/unreachable-loop-patterns.rs:20:9
   |
LL |     for _ in unimplemented!() as Void {}
   |         ^
   |
note: lint level defined here
  --> $DIR/unreachable-loop-patterns.rs:7:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/unreachable-loop-patterns.rs:20:14
   |
LL |     for _ in unimplemented!() as Void {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

